# industry-ts

./: 404.html  LICENSE  README.md  generate_new_docs.md  index.html  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: publish-to-test-pypi.yml  testing.yml
industryts/: testing.py  testtimefunctions.py
industryts/generation/: synthetic.py
industryts/models/: univariate.py
industryts/processing/: featureengineering.py  filtering.py  timefunctions.py  timestamps.py
modules/industryts/generation/synthetic/: index.html
modules/industryts/models/optimization/: index.html
modules/industryts/models/univariate/: index.html
modules/industryts/processing/featureengineering/: index.html
modules/industryts/processing/filtering/: index.html
modules/industryts/processing/timestamps/: index.html
notebooks/: get_patches.ipynb  least_squares.ipynb
search/: search_index.json
src/: automate_mkdocs.py  mkdocs.yml  mkgendocs.yml
src/docs/sources/modules/industryts/generation/: synthetic.md
src/docs/sources/modules/industryts/models/: optimization.md  univariate.md
src/docs/sources/modules/industryts/processing/: featureengineering.md  filtering.md  timestamps.md
src/industryts/generation/: synthetic.py
src/industryts/models/: optimization.py  univariate.py
src/industryts/processing/: featureengineering.py  filtering.py  timestamps.py
tests/: testing.py  testtimefunctions.py
tests/code/generation/: test_synthetic.py
